kubernetes/manifests/ingress/resources/echo-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-prod
  labels:
    type: prod-echo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      type: prod-echo-server
  template:
    metadata:
      labels:
        type: prod-echo-server
    spec:
      containers:
      - name: echo-prod
        image: abhishek1009/echo:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-prod-service
spec:
  selector:
    type: prod-echo-server
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-prod-service-nodeport
spec:
  type: NodePort
  selector:
    type: prod-echo-server
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30008
