kubernetes/manifests/ingress/resources/echo-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-test
  labels:
    type: test-echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      type: test-echo-server
  template:
    metadata:
      labels:
        type: test-echo-server
    spec:
      containers:
      - name: echo-test
        image: abhishek1009/echo:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-test-service
spec:
  selector:
    type: test-echo-server
  ports:
  - port: 8000
    targetPort: 8000
